--- a/aprapache/etc/apache2/conf.d/common/errorpages.conf
+++ b/aprapache/etc/apache2/conf.d/common/errorpages.conf
@@ -9,8 +9,8 @@
 # Customize what Apache returns to the client in case of an error.
 # https://httpd.apache.org/docs/current/mod/core.html#errordocument
 
-#ErrorDocument 404 /404.html
-#ErrorDocument 404 /missing.html
+#ErrorDocument 404 /var/www/html/404.html
+#ErrorDocument 404 /var/www/html/missing.html
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
 #ErrorDocument 500 "The server made a boo boo."
