--- a/aprnginx/etc/nginx/conf.d/default.conf
+++ b/aprnginx/etc/nginx/conf.d/default.conf
@@ -4,7 +4,8 @@
   location /_svstatus {
         stub_status on;
         # 172.17.0.0/16 is for docker containers internal subnet
-        allow   127.0.0.1 172.17.0.0/16;
+        allow   127.0.0.1;
+        allow   172.17.0.0/16;
         deny    all;
     }
 
