--- a/aprnginx/etc/nginx/conf.d/static.conf
+++ b/aprnginx/etc/nginx/conf.d/static.conf
@@ -1,4 +1,4 @@
-# Cache expire rules:
+# Static expire rules:
 # This mirrors that of apache h5bp .htaccess file.
 # However, nginx applies rules by location, the apache rules are defined by type.
 # If you use no file extension in the url and serve html, with apache you get an
