--- a/aprnginx/etc/nginx/nginx.conf
+++ b/aprnginx/etc/nginx/nginx.conf
@@ -40,15 +40,11 @@ http {
                         # text/html is always included by charset module.
 
 # Include common settings.
-      include /etc/nginx/conf.d/common.conf
-      include /etc/nginx/conf.d/gzip.conf
-      include /etc/nginx/conf.d/cache.conf
+      include /etc/nginx/conf.d/common.conf;
+      include /etc/nginx/conf.d/gzip.conf;
 
 # Configures default access format and access logger via s6 fifo.
-      log_format main '$remote_addr $scheme://$host $remote_user [$time_local] "$request" '
-      '$status $body_bytes_sent "$http_referer" '
-      '"$http_user_agent" "$http_x_forwarded_for"'
-      '$request_time $upstream_addr $upstream_cache_status';
+      log_format main '$remote_addr $scheme://$host $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for" $request_time $upstream_addr $upstream_cache_status';
 
       log_subrequest   on;
 
