--- a/aprapache/etc/apache2/httpd.conf
+++ b/aprapache/etc/apache2/httpd.conf
@@ -58,4 +58,4 @@ LogLevel warn
 CustomLog /var/log/apache2/access.log combinedio
 
 # Load config files from the enabled websites configuration directory.
-IncludeOptional /etc/apache2/sites-enabled/*
+IncludeOptional /etc/apache2/sites-enabled/*.vhost
