--- a/aprnginx/etc/nginx/conf.d/default.conf
+++ b/aprnginx/etc/nginx/conf.d/default.conf
@@ -75,10 +75,10 @@
     }
 
 # Other default error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    location ~ [4-5][0-9][0-9].html
-    {
+    error_page 403 404 405 /error/40x.html;
+    error_page 500 501 502 503 504 /error/50x.html;
+
+    location ^~ /error/ {
         internal;
-        root /usr/share/nginx/html;
+        root /var/www/html;
     }
