--- a/aprnginx/etc/nginx/conf.d/fcgi.conf
+++ b/aprnginx/etc/nginx/conf.d/fcgi.conf
@@ -6,17 +6,6 @@ fastcgi_connect_timeout         5;
 fastcgi_send_timeout            5;
 fastcgi_next_upstream           error timeout;
 fastcgi_hide_header             "X-Powered-By";
-
-# Define fastcgi cache zones below
-fastcgi_cache_path              /run/cache/nginx levels=1:1 keys_zone=PHPCache:16m max_size=256m inactive=1d;
-# Remember to replace $cookie_PHPSESSID with a proper variable name, if you use custom session name: session.name/session_name()
-fastcgi_cache_key               $request_method|$http_if_modified_since|$http_if_none_match|$host|$request_uri|$cookie_APPSESSID;
-fastcgi_cache_lock              on;
-fastcgi_cache_lock_timeout      3s;
-fastcgi_cache_methods           GET HEAD;
-fastcgi_cache_use_stale         error timeout invalid_header http_500;
-fastcgi_cache_valid             404 1m;
 if_modified_since               before;
-fastcgi_cache                   PHPCache;
-fastcgi_cache_valid             200 301 302 304 1h;
-fastcgi_cache_min_uses          3;
+#nginx: [emerg] "fastcgi_cache" zone "PHPCache" is unknown#fastcgi_cache                   PHPCache;
+
