--- a/aprphpfpm/etc/php7/php-fpm.d/docker.conf
+++ b/aprphpfpm/etc/php7/php-fpm.d/docker.conf
@@ -1,8 +1,8 @@
 ;; Ref: http://php.net/manual/en/install.fpm.configuration.php
 
 [global]
-pid = /run/php/php-fpm.pid
-error_log = /var/log/php/error.log
+pid = /run/php7/php-fpm.pid
+error_log = /var/log/php7/error.log
 log_level = notice
 daemonize = no
 rlimit_files = 10240
@@ -11,7 +11,7 @@ events.mechanism = epoll
 
 [www]
 ; if we send this to /proc/self/fd/{1,2} it may encounter pemission issues
-access.log = /var/log/php/access.log
+access.log = /var/log/php7/access.log
 
 clear_env = no
 ; Ensure worker stdout and stderr are sent to the main error log.
