--- a/aprnginx/etc/nginx/nginx.conf
+++ b/aprnginx/etc/nginx/nginx.conf
@@ -49,5 +49,5 @@ http {
       log_subrequest   on;
 
 # Include the enabled virtual host server configs.
-      include /etc/nginx/sites-enabled/*;
+      include /etc/nginx/sites-enabled/*.vhost;
 }
