--- a/aprphpfpm/etc/php7/php-fpm.d/www.conf
+++ b/aprphpfpm/etc/php7/php-fpm.d/www.conf
@@ -228,7 +228,7 @@ pm.max_requests = 1024
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-pm.status_path = /fpm-status
+pm.status_path = /_fpm-status
 
 ; The ping URI to call the monitoring page of FPM. If this value is not set, no
 ; URI will be recognized as a ping page. This could be used to test from outside
@@ -240,12 +240,12 @@ pm.status_path = /fpm-status
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
-ping.path = /fpm-ping
+ping.path = /_fpm-ping
 
 ; This directive may be used to customize the response of a ping request. The
 ; response is formatted as text/plain with a 200 response code.
 ; Default Value: pong
-;ping.response = pong
+ping.response = pong
 
 ; The access log file
 ; Default: not set
